--- a/style.css
+++ b/style.css
@@ -16,16 +16,32 @@ header {
 footer {
   background-color: black;
   color: white;
+  padding-top: 15px;
+  padding-bottom: 30px;
 }
 footer h1 {
   font-family: "Roboto Slab", serif;
+  font-style: italic;
+  padding-left: 25px;
 }
 footer li {
   list-style-type: none;
 }
+footer li .link-fas {
+  display: flex;
+}
+footer li .link-fas .fas {
+  position: relative;
+  top: 15px;
+  right: 10px;
+}
 footer li a {
   text-decoration: none;
   color: white;
+}
+footer li #contacte {
+  position: relative;
+  top: 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
