--- a/style.css
+++ b/style.css
@@ -1,14 +1,50 @@
 header {
   position: fixed;
-  left: 25rem;
+  padding-left: 70px;
 }
 @media all and (max-width: 768px) {
-  header {
-    position: fixed;
-    left: 150px;
-  }
   header img {
     width: 150px;
+  }
+}
+
+/* nav */
+nav {
+  text-align: center;
+  padding-top: 80px;
+}
+nav #menu {
+  background-color: #f3f3f2;
+  padding-bottom: 40px;
+}
+nav #menu h2 {
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+}
+nav #menu P {
+  font-size: 20px;
+  color: #4d4c4c;
+}
+nav #menu button {
+  border: 1px black solid;
+  border-radius: 20px;
+  font-size: 25px;
+}
+nav .menu1 {
+  display: flex;
+  justify-content: center;
+  border: 0px black solid;
+  -webkit-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+  -moz-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+  box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+  background-color: #dfdfdf;
+}
+nav .menu1 .fa-map-marker {
+  padding: 20px;
+}
+@media all and (max-width: 768px) {
+  nav nav {
+    width: 100%;
   }
 }
 
