--- a/style.scss
+++ b/style.scss
@@ -4,15 +4,56 @@ $tertiaireColor:#99E2D0;
 
 header{
     position: fixed;
-    left: 25rem;
+    padding-left:70px;
     @media all and (max-width:768px){
-        position: fixed;
-        left: 150px;
         img{
             width: 150px;
-            
+           
         }
     }  
+} 
+              /* nav */
+nav{
+    text-align: center;
+    padding-top: 80px;
+    #menu{
+        background-color: rgb(243, 243, 242);
+        padding-bottom: 40px;
+        h2{
+            font-family: 'Roboto Slab', serif;
+            font-size: 30px;
+        }
+        P{
+            font-size: 20px;
+            color: rgb(77, 76, 76);
+        }
+        button{
+            border: 1px black solid;
+            border-radius: 20px;
+            font-size: 25px;
+            
+
+        }
+    }
+    
+    .menu1{
+        display: flex;
+        justify-content:center;
+        border: 0px black solid;
+        -webkit-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+        -moz-box-shadow:  1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+        box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
+        background-color: rgb(223, 223, 223);
+        .fa-map-marker{
+            padding: 20px;
+        }
+    }
+    @media all and (max-width:768px){
+        nav{
+            width: 100%;
+        }  
+    }
+
 }
 
     /* footer */
