--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 header {
-  position: fixed;
-  padding-left: 70px;
+  text-align: center;
 }
 @media all and (max-width: 768px) {
   header img {
@@ -11,7 +10,7 @@ header {
 /* nav */
 nav {
   text-align: center;
-  padding-top: 80px;
+  padding-top: 10px;
 }
 nav #menu {
   background-color: #f3f3f2;
@@ -24,20 +23,24 @@ nav #menu h2 {
 nav #menu P {
   font-size: 20px;
   color: #4d4c4c;
+  padding-bottom: 25px;
 }
-nav #menu button {
-  border: 1px black solid;
+nav #menu a {
+  border: 0px black solid;
   border-radius: 20px;
-  font-size: 25px;
+  padding: 15px 25px;
+  text-decoration: none;
+  background: linear-gradient(to bottom, #FF79DA, #9356DC);
+  color: white;
 }
 nav .menu1 {
   display: flex;
   justify-content: center;
   border: 0px black solid;
-  -webkit-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-  -moz-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-  box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-  background-color: #dfdfdf;
+  -webkit-box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+  -moz-box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+  box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+  background-color: #e7e7e7;
 }
 nav .menu1 .fa-map-marker {
   padding: 20px;
