--- a/style.scss
+++ b/style.scss
@@ -3,8 +3,8 @@ $secondColor:#FF79DA;
 $tertiaireColor:#99E2D0;
 
 header{
-    position: fixed;
-    padding-left:70px;
+    
+    text-align: center;
     @media all and (max-width:768px){
         img{
             width: 150px;
@@ -15,7 +15,7 @@ header{
               /* nav */
 nav{
     text-align: center;
-    padding-top: 80px;
+    padding-top: 10px;
     #menu{
         background-color: rgb(243, 243, 242);
         padding-bottom: 40px;
@@ -26,12 +26,15 @@ nav{
         P{
             font-size: 20px;
             color: rgb(77, 76, 76);
+            padding-bottom: 25px;
         }
-        button{
-            border: 1px black solid;
+        a{
+            border: 0px black solid;
             border-radius: 20px;
-            font-size: 25px;
-            
+            padding:15px 25px;
+            text-decoration: none;
+            background:linear-gradient(to bottom, $secondColor, $primaryColor);
+            color: white;
 
         }
     }
@@ -40,10 +43,10 @@ nav{
         display: flex;
         justify-content:center;
         border: 0px black solid;
-        -webkit-box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-        -moz-box-shadow:  1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-        box-shadow: 1px -1px 6px 0px rgba(0, 0, 0, 0.81);
-        background-color: rgb(223, 223, 223);
+        -webkit-box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+        -moz-box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+        box-shadow: 4px -2px 9px 0px rgba(0, 0, 0, 0.33);
+        background-color: rgb(231, 231, 231);
         .fa-map-marker{
             padding: 20px;
         }
