--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,60 @@ nav{
     }
 
 }
+               /* main */
+main{ 
+           .link{
+               display: flex;
+               border: 0px black solid;
+               border-radius: 15px;
+               -webkit-box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
+               -moz-box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
+               box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
+               margin: 20px ;
+               width: 330px;
+               height: 70px;
+               .fas{
+                   color: grey;
+                   font-size: 20px;
+                   transform: scale(1);
+                   transition: transform 50ms;
+                   padding-top:20px;
+                   padding-right: 20px;
+                   &:hover{
+                       transform: scale(1.15);
+                       color: $primaryColor;
+                   }
+               }
+               span{
+                   border: 0px black solid;
+                   border-radius: 50%;
+                   height: 15px;
+                   width: 15px;
+                   margin-top: 15px;
+                   margin-right: 30px;
+                   padding: 10px;
+                   position: relative;
+                   right: 10px;
+                   background-color: $primaryColor;
+                   color: white;
+                   font-weight: bolder;
+               }
+               &:hover{
+                   background-color:rgb(242, 220, 250);
+                   
+               }
+               
+           }
+       
+      
+        a{
+            text-decoration: none;
+            color: black;
+            
+        }
+    
+
+}
 
     /* footer */
 footer{
