--- a/style.scss
+++ b/style.scss
@@ -128,17 +128,28 @@ section{
        box-shadow: 3px 3px 9px 0px rgba(0, 0, 0, 0.24);
        background-color: white;
        width: 300px;
+       height: 300px;
+       margin-top: 20px;
        margin-left: 20px;
        .fa-heart{
            float: right;
+           position: relative;
+           bottom: 50px;
            padding-right: 10px;
            font-size: 30px;
+           transform: scale(1);
+           transition: transform 50ms, linear 100ms;
+           
            &:hover{
-            background:linear-gradient(to top, $secondColor, $primaryColor);
+               transform: scale(1.13);
+               color: $primaryColor;
+               
            }
        }
-       .plats{
-
+        .plats{
+            padding: 10px;
+            position: relative;
+            bottom: 80px;
        }
        a{
            text-decoration: none;
@@ -157,6 +168,9 @@ section{
            left: 100px;
            font-size: 20px;
        }
+       .sans-nouveau{
+           opacity: 0;
+       }
     img{
         width:300px ;
         height: 200px;
@@ -167,6 +181,7 @@ section{
    } 
   
 }
+
 
     /* footer */
 footer{
