--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,14 @@ header{
     font-family: 'Roboto Slab', serif;
     font-size: 30px;
 }
+%button{
+    border: 0px black solid;
+    border-radius: 20px;
+    padding:15px 25px;
+    text-decoration: none;
+    background:linear-gradient(to bottom, $secondColor, $primaryColor);
+    color: white;
+}
 nav{
     text-align: center;
     padding-top: 10px;
@@ -32,14 +40,8 @@ nav{
             color: rgb(77, 76, 76);
             padding-bottom: 25px;
         }
-        a{
-            border: 0px black solid;
-            border-radius: 20px;
-            padding:15px 25px;
-            text-decoration: none;
-            background:linear-gradient(to bottom, $secondColor, $primaryColor);
-            color: white;
-
+        .btn{
+            @extend %button;
         }
     }
     
@@ -71,6 +73,9 @@ nav{
     box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
 }
 main{ 
+            h1{
+                @extend %family;
+            }
            .link{
                display: flex;
                @extend %border;
@@ -120,6 +125,9 @@ main{
 section{
    background-color: rgb(246, 248, 248);
    padding-bottom: 35px;
+   #bolde{
+       @extend %family;
+   }
    .menu-resto{
        @extend %border;
        background-color: white;
@@ -127,55 +135,78 @@ section{
        height: 300px;
        margin-top: 20px;
        margin-left: 20px;
-       .fa-heart{
-           float: right;
+    a{
+     text-decoration: none;
+      color: black;
+    .bloc{
+      display: flex;             
+         .coeur{  
            position: relative;
            bottom: 50px;
-           padding-right: 10px;
-           font-size: 30px;
-           transform: scale(1);
-           transition: transform 50ms, linear 100ms;
-           
-           &:hover{
-               transform: scale(1.13);
-               color: $primaryColor;
-               
-           }
-       }
-        .plats{
-            padding: 10px;
-            position: relative;
-            bottom: 80px;
-       }
-       a{
-           text-decoration: none;
-           color: black;
-       }
-       h3{
-           color: #0d8869;
-           background-color: $tertiaireColor;
-           border: 0px black solid;
-           width: 90px;
-           height: 30px;
-           margin-left: 60px;
-           padding-left: 20px;
-           position: relative;
-           bottom: 210px;
-           left: 100px;
-           font-size: 20px;
-       }
-       .sans-nouveau{
-           opacity: 0;
-       }
-    img{
-        width:300px ;
-        height: 200px;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+           left: 30px;
+           width: 25%;
+           font-size: 25px;
+           cursor: pointer;
+           background-color: transparent;
+           transition: all 300ms ease;
+          .fas{            
+             font-size: 35px;
+             opacity: 0;     
+             position: relative;    
+             right: 35px;            
+            &:hover{
+                opacity: 1;
+                background:-webkit-linear-gradient(0deg,$secondColor,$primaryColor);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color:transparent;
+                animation: slide-top 0.8s cubic-bezier(0.075, 0.82, 0.165, 1) both;
+                animation-name: color-coeur;
+                @keyframes color-coeur {
+                    0%{
+                        opacity: 0;
+                    }
+                    100%{
+                        opacity: 1;
+                    }
+                }
+            } 
+    
+        }
         
     }
-   } 
-  
+     .plats{
+            padding: 10px;
+            position: relative;
+            bottom: 95px;
+            width: 75%;
+             }
+
+    }
+
+       h3{
+        color: #0d8869;
+        background-color: $tertiaireColor;
+        border: 0px black solid;
+        width: 90px;
+        height: 30px;
+        margin-left: 60px;
+        padding-left: 20px;
+        position: relative;
+        bottom: 210px;
+        left: 100px;
+        font-size: 20px;
+    }
+    .sans-nouveau{
+        opacity: 0;
+    }
+    img{
+     width:300px ;
+     height: 200px;
+     border-top-left-radius: 15px;
+     border-top-right-radius: 15px;    
+   }
+ }
+  }      
 }
 
           /* manu-food */
@@ -185,6 +216,12 @@ section{
     border-top-right-radius: 30px; 
     position: relative;
     bottom: 60px; 
+    .btn{
+        @extend %button;
+        margin-top: 30px; 
+        margin-left: 110px;
+        margin-bottom: 30px;
+    }
     h1{
         @extend%family;
         font-style: italic;
@@ -200,6 +237,7 @@ section{
              color:rgb(48, 47, 47);
              border-bottom:4px $tertiaireColor solid;
              width: 55px;
+             
          }
          .link-food{
             @extend%border;
@@ -220,13 +258,18 @@ section{
                 }
                 span{
                     transform: translate(0px,-5vh); 
-                    padding-right: 20px;
+                    padding-right: 50px;
                     float: right;
                     font-weight: bolder;
                 }
             }
          }
      }
+}
+
+.footers{
+    position: relative;
+    bottom: 60px;
 }
 
 
