--- a/style.scss
+++ b/style.scss
@@ -210,10 +210,13 @@ section{
 }
 
           /* manu-food */
-.menu-food{
+%radius{
     border: 0px black solid;
     border-top-left-radius: 30px;
-    border-top-right-radius: 30px; 
+    border-top-right-radius: 30px;
+}
+.menu-food{
+    @extend%radius; 
     position: relative;
     bottom: 60px; 
     .btn{
@@ -240,11 +243,14 @@ section{
              
          }
          .link-food{
+             display: flex;
+             justify-content: space-between;
             @extend%border;
             height: 80px;
             margin-left: 5px;
             margin-right: 5px;
             padding-left:10px;
+            margin-bottom: 30px;
             background-color: white;
             a{
                 text-decoration: none;
@@ -256,13 +262,36 @@ section{
                     color: rgb(39, 39, 39);
                     font-size: 15px;
                 }
-                span{
-                    transform: translate(0px,-5vh); 
-                    padding-right: 50px;
-                    float: right;
-                    font-weight: bolder;
-                }
+                
             }
+            #prix{
+                margin-top: 35px;
+                font-weight: bolder;
+            }
+            #icon{
+                @extend%border;
+                background-color: $tertiaireColor;
+                width: 40px;
+                height: 50px;
+                padding-left: 40px;
+                padding-top: 30px;
+                color: white;
+                font-size: 30px;
+                opacity: 0;
+                &:hover{
+                    opacity: 1;
+                }
+                .fa-check-circle{
+                    margin-bottom: 20px;
+                    margin-right: 40px;
+                    position: relative;
+                    right: 10px;
+                    bottom: 5px;
+                }
+                
+                
+            }
+           
          }
      }
 }
