--- a/style.scss
+++ b/style.scss
@@ -250,46 +250,61 @@ section{
             margin-left: 5px;
             margin-right: 5px;
             padding-left:10px;
+            padding-bottom: 10px;
             margin-bottom: 30px;
             background-color: white;
-            a{
-                text-decoration: none;
-                color: black;
-                h2{
-                    font-size: 20px;
-                }
-                p{
-                    color: rgb(39, 39, 39);
-                    font-size: 15px;
+            cursor: pointer;
+            animation-name: transition;
+            animation-duration: 3s;
+            animation-timing-function: ease-in;
+            &:hover{
+                & .fas{
+                    opacity: 1;
                 }
                 
             }
-            #prix{
-                margin-top: 35px;
-                font-weight: bolder;
+            
+            @keyframes transition {
+                0%{
+                  opacity: 0;
+                }
+                100%{
+                    opacity: 1;
+                    transform: translatey(50%) rotate(0deg);
+
+                }
             }
-            #icon{
+            a{
+                text-decoration: none;
+                color: black;
+                 
+            }
+            #prix{
+                position: relative;
+                left: 280px;
+                bottom: 20px;
+                font-weight: bolder;
+                font-family: 'Roboto Slab', serif;
+            }
+            h2{
+                font-size: 15px;
+                font-family: 'Roboto Slab', serif;   
+            }
+            p{
+                font-size: 13px;
+            }
+
+            .fas{
                 @extend%border;
-                background-color: $tertiaireColor;
-                width: 40px;
-                height: 50px;
-                padding-left: 40px;
+                background-color:$tertiaireColor;
+                width: 60px;
+                height: 60px;
+                padding-left: 30px;
                 padding-top: 30px;
                 color: white;
                 font-size: 30px;
                 opacity: 0;
-                &:hover{
-                    opacity: 1;
-                }
-                .fa-check-circle{
-                    margin-bottom: 20px;
-                    margin-right: 40px;
-                    position: relative;
-                    right: 10px;
-                    bottom: 5px;
-                }
-                
-                
+
             }
            
          }
