--- a/style.scss
+++ b/style.scss
@@ -149,6 +149,11 @@ section{
            cursor: pointer;
            background-color: transparent;
            transition: all 300ms ease;
+           &:hover{
+               & .far{
+                   opacity: 0;
+               }
+           }
           .fas{            
              font-size: 35px;
              opacity: 0;     
@@ -214,6 +219,13 @@ section{
     border: 0px black solid;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
+}
+.retour{
+    color: black;
+    font-size: 20px;
+    position: relative;
+    left: 40px;
+    top: 30px;
 }
 .menu-food{
     @extend%radius; 
