--- a/style.scss
+++ b/style.scss
@@ -130,64 +130,69 @@ section{
    }
    .menu-resto{
        @extend %border;
-       background-color: white;
+       background-color: rgb(245, 241, 241);
        width: 300px;
        height: 300px;
        margin-top: 20px;
        margin-left: 20px;
-    a{
-     text-decoration: none;
-      color: black;
-    .bloc{
-      display: flex;             
-         .coeur{  
-           position: relative;
-           bottom: 50px;
-           left: 30px;
-           width: 25%;
-           font-size: 25px;
-           cursor: pointer;
-           background-color: transparent;
-           transition: all 300ms ease;
-           &:hover{
-               & .far{
-                   opacity: 0;
-               }
-           }
-          .fas{            
-             font-size: 35px;
-             opacity: 0;     
-             position: relative;    
-             right: 35px;            
-            &:hover{
-                opacity: 1;
-                background:-webkit-linear-gradient(0deg,$secondColor,$primaryColor);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color:transparent;
-                animation: slide-top 0.8s cubic-bezier(0.075, 0.82, 0.165, 1) both;
-                animation-name: color-coeur;
-                @keyframes color-coeur {
-                    0%{
-                        opacity: 0;
-                    }
-                    100%{
-                        opacity: 1;
-                    }
-                }
-            } 
-    
-        }
-        
-    }
-     .plats{
-            padding: 10px;
-            position: relative;
-            bottom: 95px;
-            width: 75%;
+       &:hover{
+           background-color:whitesmoke;
+           box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.6);
+       }
+       .bloc{
+        display: flex;             
+           .coeur{  
+             position: relative;
+             bottom: 50px;
+             left: 30px;
+             width: 25%;
+             font-size: 25px;
+             cursor: pointer;
+             background-color: transparent;
+             transition: all 300ms ease;
+             &:hover{
+                 & .far{
+                     color: $secondColor;
+                     opacity: 0.5;
+                 }
              }
-
-    }
-
+            .fas{            
+               font-size: 35px;
+               opacity: 0;     
+               position: relative;    
+               right: 35px;            
+              &:active{
+                  opacity: 1;
+                  background:-webkit-linear-gradient(0deg,$secondColor,$primaryColor);
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color:transparent;
+                  animation-fill-mode: forwards;
+                  transform: translatez(-50%,50%) rotate(90deg);
+                  animation: slide-top 1s ease-in both;
+                  animation-name: color-coeur;
+                  @keyframes color-coeur {
+                      0%{
+                          opacity: 0;
+                      }
+                      100%{
+                          opacity: 1;
+                      }
+                  }
+              } 
+      
+          }
+          
+      }
+       .plats{
+              padding: 10px;
+              position: relative;
+              bottom: 95px;
+              width: 75%;
+               }
+      }
+    a{
+       text-decoration: none;
+       color: black;
        h3{
         color: #0d8869;
         background-color: $tertiaireColor;
@@ -200,18 +205,20 @@ section{
         bottom: 210px;
         left: 100px;
         font-size: 20px;
-    }
-    .sans-nouveau{
+     }
+      .sans-nouveau{
         opacity: 0;
-    }
-    img{
+     }
+     img{
      width:300px ;
      height: 200px;
      border-top-left-radius: 15px;
-     border-top-right-radius: 15px;    
+     border-top-right-radius: 15px;
+     background-position: center;  
+     background-size: cover;  
+    }
    }
- }
-  }      
+}      
 }
 
           /* manu-food */
@@ -267,25 +274,34 @@ section{
             background-color: white;
             cursor: pointer;
             animation-name: transition;
-            animation-duration: 3s;
-            animation-timing-function: ease-in;
+            animation-delay: 250ms;
+            animation-duration: 2s;
+            animation-fill-mode: forwards;
+            animation-direction: alternate;
+            animation-timing-function: cubic-bezier(.13,0,1,.24);
             &:hover{
                 & .fas{
                     opacity: 1;
                 }
+                & #prix{
+                    position: absolute;
+                    animation-delay: -5s;
+                    transform: translateX(-25px) rotate(360deg);
+                }
                 
             }
             
-            @keyframes transition {
-                0%{
-                  opacity: 0;
+                @keyframes transition {
+                    0%{
+                      opacity: 0;
+                    }
+                    100%{
+                        opacity: 1;
+                        transform: translatey(-5%) rotate(0deg) ;
+                    }
                 }
-                100%{
-                    opacity: 1;
-                    transform: translatey(50%) rotate(0deg);
-
-                }
-            }
+            
+            
             a{
                 text-decoration: none;
                 color: black;
@@ -299,11 +315,17 @@ section{
                 font-family: 'Roboto Slab', serif;
             }
             h2{
-                font-size: 15px;
-                font-family: 'Roboto Slab', serif;   
+                font-size: 17px;
+                font-family: 'Roboto Slab', serif;  
+                white-space: nowrap; 
+                text-overflow: ellipsis;
+                overflow: hidden;
             }
             p{
-                font-size: 13px;
+                font-size: 15px;
+                white-space: nowrap; 
+                text-overflow: ellipsis;
+                overflow: hidden
             }
 
             .fas{
