--- a/style.css
+++ b/style.css
@@ -62,6 +62,14 @@ nav .menu1 .fa-map-marker {
   box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.38);
 }
 
+main h1 {
+  padding-left: 10px;
+}
+main .links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 main .link {
   display: flex;
   margin: 20px;
@@ -97,6 +105,7 @@ main .link:hover {
 main a {
   text-decoration: none;
   color: black;
+  padding-right: 10px;
 }
 
 /* Section */
@@ -104,12 +113,18 @@ section {
   background-color: #f6f8f8;
   padding-bottom: 35px;
 }
+section #bolde {
+  padding: 10px;
+}
+section .article {
+  display: flex;
+  flex-wrap: wrap;
+}
 section .menu-resto {
   background-color: #f5f1f1;
   width: 300px;
   height: 300px;
-  margin-top: 20px;
-  margin-left: 20px;
+  margin: 20px auto;
 }
 section .menu-resto:hover {
   background-color: whitesmoke;
