--- a/style.scss
+++ b/style.scss
@@ -62,7 +62,6 @@ nav{
             width: 100%;
         }  
     }
-
 }
                /* main */
 %border{
@@ -75,6 +74,12 @@ nav{
 main{ 
             h1{
                 @extend %family;
+                padding-left: 10px;
+            }
+            .links{
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-around;     
             }
            .link{
                display: flex;
@@ -108,15 +113,12 @@ main{
                }
                &:hover{
                     background-color: $opacityprimo;                  
-               }
-               
+               }      
            }
-       
-      
         a{
             text-decoration: none;
             color: black;
-            
+            padding-right: 10px;    
         }
     
 
@@ -127,14 +129,18 @@ section{
    padding-bottom: 35px;
    #bolde{
        @extend %family;
+       padding: 10px;
+   }
+   .article{
+       display: flex;
+       flex-wrap: wrap;
    }
    .menu-resto{
        @extend %border;
        background-color: rgb(245, 241, 241);
        width: 300px;
        height: 300px;
-       margin-top: 20px;
-       margin-left: 20px;
+       margin: 20px auto;
        &:hover{
            background-color:whitesmoke;
            box-shadow: 6px 4px 15px 0px rgba(0, 0, 0, 0.6);
