--- a/style.scss
+++ b/style.scss
@@ -233,6 +233,12 @@ section{
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
 }
+nav{
+    img{
+        width: 350px;
+        height: 250px;
+    }
+}
 .retour{
     color: black;
     font-size: 20px;
@@ -245,15 +251,16 @@ section{
     position: relative;
     bottom: 60px; 
     .btn{
-        @extend %button;
-        margin-top: 30px; 
-        margin-left: 110px;
-        margin-bottom: 30px;
+       text-align: center;
+       button{
+         @extend %button;
+       }
     }
-    h1{
+    h2{
         @extend%family;
         font-style: italic;
         padding-top: 20px;
+        
      }
      .fa-heart{
          font-size: 25px;
@@ -265,15 +272,25 @@ section{
              color:rgb(48, 47, 47);
              border-bottom:4px $tertiaireColor solid;
              width: 55px;
+             margin-left: 20px;
              
          }
+         .link-food:nth-child(1){
+            animation-duration: .5s;
+        }
+         .link-food:nth-child(2){
+             animation-duration: .75s;
+         }
+         .link-food:nth-child(3){
+            animation-duration: 1s;
+        }
          .link-food{
              display: flex;
              justify-content: space-between;
             @extend%border;
             height: 80px;
-            margin-left: 5px;
-            margin-right: 5px;
+            width: 500px;
+            margin-left: 100px;
             padding-left:10px;
             padding-bottom: 10px;
             margin-bottom: 30px;
@@ -285,15 +302,34 @@ section{
             animation-fill-mode: forwards;
             animation-direction: alternate;
             animation-timing-function: cubic-bezier(.13,0,1,.24);
+            @media all and (max-width:768px){
+                width: auto;
+                margin: 30px 5px;
+            }
+            
             &:hover{
                 & .fas{
-                    opacity: 1;
+                    opacity: 0.3;
                 }
-                & #prix{
+                & span{
                     position: absolute;
                     animation-delay: -5s;
-                    transform: translateX(-25px) rotate(360deg);
+                    transform: translateX(-65px) rotate(360deg);
                 }
+                & p{
+                        width: 180px;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden
+                    
+                }
+                & h2{
+                    width: 200px;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden
+                
+            }
                 
             }
             
@@ -306,34 +342,28 @@ section{
                         transform: translatey(-5%) rotate(0deg) ;
                     }
                 }
-            
-            
             a{
                 text-decoration: none;
                 color: black;
                  
             }
-            #prix{
+            span{
                 position: relative;
                 left: 280px;
-                bottom: 20px;
+                bottom: 30px;
                 font-weight: bolder;
                 font-family: 'Roboto Slab', serif;
             }
-            h2{
-                font-size: 17px;
+             h2{
+                font-size: 13px;
                 font-family: 'Roboto Slab', serif;  
-                white-space: nowrap; 
-                text-overflow: ellipsis;
-                overflow: hidden;
+                overflow: visible;
             }
             p{
-                font-size: 15px;
-                white-space: nowrap; 
-                text-overflow: ellipsis;
-                overflow: hidden
+                font-size: 13px;
+                overflow: visible; 
+               
             }
-
             .fas{
                 @extend%border;
                 background-color:$tertiaireColor;
@@ -344,7 +374,9 @@ section{
                 color: white;
                 font-size: 30px;
                 opacity: 0;
-
+               &:active{
+                   opacity: 1;
+               }
             }
            
          }
